--- a/sphinx_ansible_theme/layout.html
+++ b/sphinx_ansible_theme/layout.html
@@ -114,7 +114,7 @@
     {# SIDE NAV, TOGGLES ON MOBILE #}
     <nav data-toggle="wy-nav-shift" class="wy-nav-side">
       <div class="wy-side-scroll">
-        <div class="wy-side-nav-search" {% if theme_style_nav_header_background %} style="background: {{theme_style_nav_header_background}}" {% endif %}>
+        <!-- <div class="wy-side-nav-search" {% if theme_style_nav_header_background %} style="background: {{theme_style_nav_header_background}}" {% endif %}>
           {% block sidebartitle %}
 
           {% if logo and theme_logo_only %}
@@ -142,7 +142,7 @@
           {% include "ansible_searchbox.html" %}
 
           {% endblock %}
-        </div>
+        </div> -->
 
         {% block navigation %}
         <div class="wy-menu wy-menu-vertical" data-spy="affix" role="navigation" aria-label="main navigation">
