--- a/sphinx_ansible_theme/ansible_extrabody.html
+++ b/sphinx_ansible_theme/ansible_extrabody.html
@@ -11,7 +11,7 @@
 <a class="DocSite-nav" href="/" style="padding-bottom: 30px;">
 
 <img class="DocSiteNav-logo"
-  src="{{ pathto('_static/', 1) }}images/logo_invert.png"
+  src="{{ pathto('_static/', 1) }}images/Telekom_Logo_2013_neu.png"
   alt="Ansible Logo">
 <div class="DocSiteNav-title">{{ docstitle | default('Documentation') }}</div>
 </a>
